<resources>
    <string name="app_name">Profiling</string>
    <string name="title_home">Parameters</string>
    <string name="title_dashboard">LOG</string>
    <string name="title_notifications">Notifications</string>
    <string name="params_start_time">Start Time</string>
    <string name="params_end_time">End Time</string>
    <string name="params_block_size">Block Content Size KB</string>
    <string name="params_block_rate">Block Rate B/s</string>
    <string name="params_distance">Distance(M)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
