<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parameters"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0.01in">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0.1in">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/params_start_time"
                android:textAlignment="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/startTime"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/params_start_time"
                android:inputType="time" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/startTimePicker"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="showTimePickerDialog"
                android:text="Pick A Tim\e" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0.1in">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/params_end_time"
                android:textAlignment="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/endTime"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/params_end_time"
                android:inputType="time" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/endTimePicker"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="showTimePickerDialog"
                android:text="Pick A Tim\e" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0.1in">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/params_block_size"
                android:textAlignment="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/params_block_size"
                android:inputType="number"
                tools:text="10" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0.1in">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/params_block_rate"
                android:textAlignment="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/params_block_rate"
                android:inputType="number"
                tools:text="0.1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0.1in">

            <TextView
                android:id="@+id/textView6"
                android:layout_height="wrap_content"
                android:layout_width="0px"
                android:layout_weight="1"
                android:text="@string/params_distance"
                android:textAlignment="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0.1in">

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Start" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="End" />
        </TableRow>
    </TableLayout>

</LinearLayout>